--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     </head>
     <body>
         <script src="./script.js"></script>
+        <table>
+            <tr>
+                <td><input type="text" id="addMerk" value="" placeholder="Volvo"></td>
+                <td><button onclick="addMerk()">Add</button></td>
+            </tr> 
+        </table>
+        <button onclick="showMerk()">Show</button>
+        <table>
+            <tr>
+                <td><p id="outMerk"></p></td>
+                <td><p id="outVal"></p></td>
+            </tr> 
+        </table>
     </body>
 </html>
