--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
         <title>Pengenalan Javascript</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <script src="./script.js"></script>
-        <table>
-            <tr>
-                <td><input type="text" id="addMerk" value="" placeholder="Volvo"></td>
-                <td><button onclick="addMerk()">Add</button></td>
-            </tr> 
-        </table>
-        <button onclick="showMerk()">Show</button>
-        <table>
-            <tr>
-                <td><p id="outMerk"></p></td>
-                <td><p id="outVal"></p></td>
-            </tr> 
-        </table>
+        <div id="main">
+            <h3><center>Daftar Merk Laptop</center></h3>
+            <table  class="table1">
+                <tr>
+                    <td><input type="text" id="addMerk" value="" placeholder="input merk laptop"></td></td>
+                </tr>
+                <tr>
+                    <td><button class="button" onclick="addMerk()">Add</button></td>
+                </tr> 
+            </table>
+            <button class="button2" onclick="showMerk()">Show</button>
+            <table>
+                <tr>
+                    <td><b>Hasil Maping</b></td>
+                </tr>
+                <tr>
+                    <td><p id="outMerk"></p></td>
+                    <td><p id="outVal"></p></td>
+                </tr> 
+            </table>
+        </div>   
     </body>
 </html>
