--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <script src="./script.js"></script>
         <div id="main">
-            <h3><center>Daftar Merk Laptop</center></h3>
+            <h3><center>Mapping Merk Laptop</center></h3>
             <table  class="table1">
                 <tr>
                     <td><input type="text" id="addMerk" value="" placeholder="input merk laptop"></td></td>
