--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
+    <header>
+    </header>
     <body>
         <script src="./script.js"></script>
+        <h4><marquee>Tugas Modul 1 Kelompok 33</marquee></h4>
         <div id="main">
-            <h3><center>Mapping Merk Laptop</center></h3>
+            <h3><center>DAFTAR MERK LAPTOP</center></h3>
             <table  class="table1">
                 <tr>
                     <td><input type="text" id="addMerk" value="" placeholder="input merk laptop"></td></td>
@@ -20,7 +23,7 @@
             <button class="button2" onclick="showMerk()">Show</button>
             <table>
                 <tr>
-                    <td><b>Hasil Maping</b></td>
+                    <td><b>Hasil Mapping</b></td>
                 </tr>
                 <tr>
                     <td><p id="outMerk"></p></td>
